# SRX

./: Cargo.toml  README.md  SPEC.md
.github/workflows/: rust.yml
benches/: bench.rs
scr/crypto/: mod.rs
scr/format/: chunk_index.rs  mod.rs  tlv.rs
src/: archive.rs  lib.rs  main.rs
src/compression/: mod.rs
src/format/: header.rs
