[package]
name = "srx"
version = "1.0.0"
edition = "2021"
description = "Modern compressed + encrypted archive format"
license = "GPL-3.0-only"
repository = "https://github.com/Jamshed-develop/srx"
readme = "README.md"
keywords = ["compression", "encryption", "archive", "cli"]
categories = ["compression", "cryptography", "command-line-utilities"]
documentation = "https://github.com/Jamshed-develop/SRX/wiki"
homepage = "https://github.com/Jamshed-develop/srx"

[dependencies]
zstd = "0.13"
chacha20poly1305 = { version = "0.10", features = ["std"] }
argon2 = "0.5"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
bitflags = "2.5"
rand = "0.8"
lz4_flex = "0.11"

[dev-dependencies]
tempfile = "3.10"
criterion = "0.5"

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
